--- a/src/Game/game.scss
+++ b/src/Game/game.scss
@@ -8,5 +8,13 @@
     width: 100%;
     height: 100%;
 
+    .block {
+      position: absolute;
+
+      &.targeted-block {
+        border: 1px solid gray;
+      }
+    }
+
   }
 }
