--- a/src/components/player/player.scss
+++ b/src/components/player/player.scss
@@ -7,8 +7,18 @@
   height: 20px;
   background: blue;
   border-radius: 100%;
-  .name {
+  .processBarWrapper {
     position: absolute;
-    margin-top: -20px;
+    top: 24px;
+    left: -10px;
+    width: 40px;
+    height: 8px;
+    background: black;
+    border-radius: 4px;
+    .processBar {
+      height: 8px;
+      background: yellow;
+      border-radius: 4px;
+    }
   }
 }
