--- a/src/components/inventory/index.scss
+++ b/src/components/inventory/index.scss
@@ -8,9 +8,44 @@
   height: 540px;
   background: rgba(0, 0, 0, 0.7);
   .inventory {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 600px;
     height: 400px;
     background: #777777;
     border: 2px solid #aaaaaa;
+    .craft-area {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 150px;
+      .crafting-item {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 4px;
+        width: 80px;
+        height: 80px;
+        margin-right: 20px;
+      }
+    }
+    .items-area {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 250px;
+      .items {
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-gap: 4px;
+      }
+    }
+    .item {
+      width: 40px;
+      height: 40px;
+      border: 2px solid #aaaaaa;
+    }
   }
 }
