--- a/src/components/inventory/index.scss
+++ b/src/components/inventory/index.scss
@@ -20,14 +20,20 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 150px;
-      .crafting-item {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 4px;
-        width: 80px;
-        height: 80px;
-        margin-right: 20px;
+      height: 230px;
+      .crafting-list {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        padding: 4px;
+        .crafting-list-item {
+          width: 100%;
+          border: 1px solid #555555;
+          padding: 4px;
+          &:hover {
+            background: #888888;
+          }
+        }
       }
     }
     .items-area {
@@ -35,7 +41,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 250px;
+      height: 220px;
       .items {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
