add: window background color

--- a/src/Game/game.scss
+++ b/src/Game/game.scss
@@ -3,6 +3,7 @@
   height: 540px;
   margin: 20px auto 0 auto;
   overflow: hidden;
+  background: #282c34;
   .display {
     position: relative;
     width: 100%;
